syntax = "proto3";

package usuarios;
import "google/protobuf/empty.proto";

service Usuarios{
  rpc AgregarUsuario (Usuario) returns (MsgResponse) {}
  rpc getUsuario (getUsuarioRequest) returns(Usuario) {}
  rpc ObtenerUsuarios (google.protobuf.Empty) returns (UsuariosList) {}
}

enum UsuarioEstatus{
  OFFLINE = 0;
  AVAILABLE = 1;
}

enum UsuarioType{
  UNKNOWN = 0;
  CLIENTE = 1;
  ADMIN = 2;
}

message Usuario {
  int32 id = 1;
  string usuario = 2;
  string contrasena = 3;
  UsuarioEstatus estatus = 4;
  UsuarioType tipo = 5;
}

message UsuariosList{
  repeated Usuario usuarios = 1;
}

message MsgResponse {
  string message = 1;
}

message getUsuarioRequest{
  int32 id = 1;
}